--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "aws-sdk": "^2.1659.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.3"
-  }
+  },
+  "type": "module"
 }
